under development: login and register page

--- a/client/src/components/features/header/Header.module.css
+++ b/client/src/components/features/header/Header.module.css
@@ -27,6 +27,11 @@
     font-size: 0.8em;
 }
 
+.nav-ul li a {
+    text-decoration: none;
+    color: black;
+}
+
 .main-heading {
     color: #7BCDCE;
     font-weight: 500;
