adding create functionality

--- a/client/src/components/features/teams/createTeam/CreateTeam.module.css
+++ b/client/src/components/features/teams/createTeam/CreateTeam.module.css
@@ -3,3 +3,11 @@
     justify-content: center;
     /* max-width: 800px; */
 }
+
+.errorMessage {
+    color: red;
+}
+
+.serverError {
+    color: red;
+}
