--- a/client/src/components/features/teams/allTeams/AllTeams.module.css
+++ b/client/src/components/features/teams/allTeams/AllTeams.module.css
@@ -1,6 +1,11 @@
-.card-items {
+.container {
+    width: 100%;
+    margin-left: 3em;
+    margin-right: 3em;
+}
+
+.row {
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
-    /* margin: 0 auto; */
+    gap: 2em;
 }
