--- a/client/src/components/features/teams/deleteTeam/DeleteTeam.module.css
+++ b/client/src/components/features/teams/deleteTeam/DeleteTeam.module.css
@@ -20,13 +20,13 @@
     position: absolute;
     max-height: 90vh;
     /* margin: auto; */
-    margin-left: 25%;
+    margin-left: 18%;
     border-radius: 10px;
     background-color: white;
     padding: 1rem;
     box-shadow: 0 2px 8px rgb(0 0 0 / 25%);
     z-index: 30;
-    margin-top: 50px;
+    margin-top: -20%;
 }
 
 .header {
