--- a/client/src/components/features/teams/detailsTeam/DetailsTeam.module.css
+++ b/client/src/components/features/teams/detailsTeam/DetailsTeam.module.css
@@ -1,24 +1,81 @@
 .team {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #666;
-    padding: 3em;
-    width: 50%;
-    gap: 2em;
+    max-width: 1400px;
+    min-height: 100vh;
+    margin: 0 auto;
+    padding: 5em 8em;
 }
 
-.team button {
-    align-self: self-end;
+
+/* display: flex; */
+/* justify-content: center; */
+/* border-bottom: 1px solid #666; */
+/* padding: 3em; */
+/* max-width: 1000px; */
+/* margin: 0 auto;
+    width: 100%; */
+
+.sub-container-team {
+    /* display: flex; */
+    /* border: solid red;
+    border-radius: 20px; */
+    /* border-bottom: 1px solid #666; */
+    /* max-width: 800px; */
+    /* flex-wrap: wrap; */
+    /* overflow: hidden; */
+
+    /* margin: 0 auto; */
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+    flex-wrap: wrap;
+    background: #fff;
+    text-align: center;
+    padding: 50px 20px 20px;
+    border: #3B91C1 solid 2px;
+    border-radius: 15px;
+}
+
+.teamInfo-right {
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* flex-wrap: wrap; */
+    /* justify-content: space-between; */
+    /* margin-top: 3em; */
+    /* max-width: 50%; */
+    flex: 1 1 65%;
+}
+
+.teamInfo-right-info p {
+    font-size: 1.5em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.teamInfo-right-info span {
+    color: #0D6EFD;
+    /* display: block; */
+    /* overflow: hidden;
+     white-space: nowrap;
+    text-overflow: ellipsis; 
+    overflow-wrap: break-word; */
+}
+
+.teamInfo-right-btn {
+    margin-top: 5em;
 }
 
 .teamInfo-left-logo {
-    width: 300px;
-    height: auto;
+    max-width: 300px; 
+    /* height: auto; */
     overflow: hidden;
-    /* border: 3px solid #eee; */
+    /* margin-right: -10em; */
 }
 
 .teamInfo-left-logo img {
+    display: block;
     width: 100%;
     height: auto;
+    object-fit: cover;
 }
