--- a/client/src/components/features/users/register/Register.module.css
+++ b/client/src/components/features/users/register/Register.module.css
@@ -2,14 +2,32 @@
     display: flex;
     justify-content: center;
     align-items: center;
+   /* border-radius: 10px; */
+   /* background-color: red; */
 }
 
-.register-form-container input {
-    display: block;
-    width: 100%;
+.register-heading p{
+    font-size: 2em;
+    border-bottom: 1.5px solid black;
+    text-align: center;
+    width: 80%;
+    margin-left: 1.5em;
+    margin-bottom: 1em;
+    font-weight: 500;
+}
+
+.login-here {
+    margin-top: 1.5em;
+    margin-left: 7.5em;
+}
+
+.login-here span {
+    margin-left: 0.5em;
 }
 
 .errorMessage {
+    margin-top: 0.5em;
+    margin-left: 0.3em;
     color: red;
 }
 
