--- a/client/src/components/features/teams/allTeams/AllTeams.module.css
+++ b/client/src/components/features/teams/allTeams/AllTeams.module.css
@@ -8,4 +8,33 @@
     display: flex;
     flex-wrap: wrap;
     gap: 2em;
+    margin-top: 2em;
+}
+
+h1 {
+    overflow: hidden;
+    text-align: start;
+    /* color: red; */
+    /* margin-bottom: 5em; */
+}
+
+h1::before,
+h1::after {
+    background-color: #000;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    position: relative;
+    vertical-align: middle;
+    width: 80%;
+}
+
+h1::before {
+    right: 0.5em;
+    margin-left: -80%;
+}
+
+h1::after {
+    left: 0.5em;
+    margin-right: -80%;
 }
