--- a/client/src/components/features/news/deleteNews/DeleteNews.module.css
+++ b/client/src/components/features/news/deleteNews/DeleteNews.module.css
@@ -26,7 +26,7 @@
     padding: 1rem;
     box-shadow: 0 2px 8px rgb(0 0 0 / 25%);
     z-index: 30;
-    margin-top: 50px;
+    margin-top: 35%;
 }
 
 .header {
