--- a/client/src/components/features/news/detailsNews/DetailsNews.module.css
+++ b/client/src/components/features/news/detailsNews/DetailsNews.module.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     width: 100%;
     display: inline-block;
-    padding-bottom: 2em;
+    /* padding-bottom: 2em; */
     padding-top: 1em;
     border-bottom: 1px solid black;
     margin-bottom: 2em;
@@ -36,17 +36,25 @@
 
 .main-article p {
     font-size: 16px;
-    line-height: 22px;
+    /* line-height:0.5em; */
     font-weight: 300;
     text-align: justify;
+    text-indent: 1em;
     color: #212121;
+    margin-top: 2em;
 }
-
 
 .header-news-p {
     font-size: 50px;
-    line-height: 56px;
+    line-height: 1.5em;
     font-weight: 900;
+}
+
+.btn {
+    display: flex;
+    justify-content:center;
+    margin-right: 18em;
+    margin-top: 2em;
 }
 
 
