--- a/client/src/components/features/teams/editTeam/EditTeam.module.css
+++ b/client/src/components/features/teams/editTeam/EditTeam.module.css
@@ -4,10 +4,23 @@
     /* max-width: 800px; */
 }
 
+.editTeam-heading p {
+    font-size: 2em;
+    border-bottom: 1.5px solid black;
+    text-align: center;
+    width: 80%;
+    margin-left: 1.5em;
+    margin-bottom: 1em;
+    font-weight: 500;
+}
+
 .errorMessage {
+    margin-top: 0.5em;
+    margin-left: 0.3em;
     color: red;
 }
 
 .serverError {
+    margin-left: 5em;
     color: red;
 }
